<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:contentDescription="@string/string_image_content_description"
        android:id="@+id/ivImageViewBottomSheetDialogMemberInfo"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/user_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:contentDescription="@string/string_image_content_description"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|start"
            android:src="@drawable/name" />

        <TextView
            android:id="@+id/tvNameBottomSheetDialogMemberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/string_hint_name"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/string_image_content_description"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/address" />

        <TextView
            android:id="@+id/tvAddressBottomSheetDialogMemberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/string_hint_address"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvContactBottomSheetDialogMemberInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/string_hint_contact"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp" />

        <ImageView
            android:contentDescription="@string/string_image_content_description"
            android:id="@+id/ivImageViewCallBottomSheetDialogMemberInfo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|start"
            android:layout_marginEnd="40dp"
            android:src="@drawable/phone_call" />
    </LinearLayout>

</LinearLayout>