<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAddNewTenants"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#AA000000"
            android:theme="@style/AppTheme.ToolbarTheme"
            app:subtitle="Add New Tenant"
            app:subtitleTextColor="@android:color/holo_orange_light"
            app:title="Easy Landlord"
            app:titleTextColor="@android:color/white" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/insertNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tvMemberInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/string_personal_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_orange_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvMemberInfo"
                app:layout_constraintTop_toBottomOf="@+id/ivTenantImage">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_name"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivTenantImage"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/string_image_content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMemberInfo"
                app:srcCompat="@drawable/user_image" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvMemberInfo"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_address"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvMemberInfo"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutAddress">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_contact"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvRoomBooking"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/string_room_booking"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_orange_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutContact" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutRoomId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvRoomBooking"
                app:layout_constraintTop_toBottomOf="@+id/tvRoomBooking">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRoomId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_roomId"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvExistedRoomId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_green_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvRoomBooking"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutRoomId" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutRoomCharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvRoomBooking"
                app:layout_constraintTop_toBottomOf="@+id/tvExistedRoomId">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRoomCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_room_charge"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutElectricityCurrentUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvRoomBooking"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutRoomCharge">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etElectricityInitialUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/string_hint_electricity_initial_unit"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/layout_Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/tvRoomBooking"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutElectricityCurrentUnit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/string_room_paid_up_to"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/holo_green_dark" />

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Spinner>

            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_button"
                android:text="@string/string_bth_save"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_Spinner" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
